--- a/laptop_setup/roles/zsh/tasks/main.yml
+++ b/laptop_setup/roles/zsh/tasks/main.yml
@@ -1,9 +1,12 @@
 ---
 - name: Install zsh
   pacman:
-    name: zsh-syntax-highlighting
+    name: {{ item }}
     state: present
   become: true
+  loop:
+    - zsh-syntax-highlighting
+    - zsh-autosuggestions
 
 - name: Create zshrc for {{ username }}
   copy:
