--- a/laptop_setup/roles/etc/tasks/main.yml
+++ b/laptop_setup/roles/etc/tasks/main.yml
@@ -32,3 +32,11 @@
     line: 'RuntimeWatchdogSec=20'
     backrefs: yes
   become: true
+
+- name: symlink /etc/resolv.conf
+  file:
+    src: /run/systemd/resolve/stub-resolv.conf
+    dest: /etc/resolv.conf
+    state: link
+    force: yes
+  become: true
