Move to Fira Code

--- a/laptop_setup/roles/gnome/tasks/main.yml
+++ b/laptop_setup/roles/gnome/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Install gnome
   pacman:
-    name: ['gnome', 'gnome-extra', 'pulseaudio-bluetooth', 'otf-fira-mono']
+    name: ['gnome', 'gnome-extra', 'pulseaudio-bluetooth', 'ttf-fira-code']
     state: present
   become: true
 
