--- a/laptop_setup/roles/xapp/tasks/main.yml
+++ b/laptop_setup/roles/xapp/tasks/main.yml
@@ -57,31 +57,31 @@
   become_user: '{{ username }}'
   loop: [gitconfig, gitconfig.ignore]
 
-- name: config redshift
-  copy:
-    src: files/redshift
-    dest: '{{ ansible_user_dir }}/.config/redshift.conf'
-    owner: '{{ username }}'
-    group: users
-    mode: 0644
-  become: true
-  become_user: '{{ username }}'
+# - name: config redshift
+#   copy:
+#     src: files/redshift
+#     dest: '{{ ansible_user_dir }}/.config/redshift.conf'
+#     owner: '{{ username }}'
+#     group: users
+#     mode: 0644
+#   become: true
+#   become_user: '{{ username }}'
 
-- file:
-    path: '{{ ansible_user_dir }}/.config/systemd/user/default.target.wants'
-    state: directory
-  become: true
-  become_user: '{{ username }}'
+# - file:
+#     path: '{{ ansible_user_dir }}/.config/systemd/user/default.target.wants'
+#     state: directory
+#   become: true
+#   become_user: '{{ username }}'
 
-- name: enable redshift-gtk.service
-  # systemd:
-  #   name: redshift-gtk.service
-  #   scope: user
-  #   enabled: yes
-  # become_method: machinectl
-  file:
-    src: /usr/lib/systemd/user/redshift-gtk.service
-    dest: '{{ ansible_user_dir }}/.config/systemd/user/default.target.wants/redshift-gtk.service'
-    state: link
-  become: true
-  become_user: '{{ username }}'
+# - name: enable redshift-gtk.service
+#   # systemd:
+#   #   name: redshift-gtk.service
+#   #   scope: user
+#   #   enabled: yes
+#   # become_method: machinectl
+#   file:
+#     src: /usr/lib/systemd/user/redshift-gtk.service
+#     dest: '{{ ansible_user_dir }}/.config/systemd/user/default.target.wants/redshift-gtk.service'
+#     state: link
+#   become: true
+#   become_user: '{{ username }}'
