--- a/arch_install/roles/network/tasks/main.yml
+++ b/arch_install/roles/network/tasks/main.yml
@@ -25,4 +25,5 @@
       [Network]
       DHCP=ipv4
     dest: /etc/systemd/network/dhcp.network
+    mode: 0644
   when: ansible_virtualization_role == 'guest'
