To revert with ansible 2.11
 https://github.com/ansible/ansible/pull/71197/commits/0d7197695e6c6c31aeff6b3cc6e2478b186640db

--- a/arch_install/main.yml
+++ b/arch_install/main.yml
@@ -46,7 +46,9 @@
     tags: root_password
 
   - name: Enable sshd
-    service:
-      name: sshd
-      enabled: yes
+    command: systemctl enable sshd.service
+    # systemd:
+    #   name: sshd.service
+    #   enabled: yes
+
     when: ansible_virtualization_role == 'guest'
