--- a/laptop_setup/roles/i3/files/config
+++ b/laptop_setup/roles/i3/files/config
@@ -10,6 +10,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $monitor $(xrandr | grep --color=never -E ' connected (primary )?[1-9]+' | sed -e 's/\([A-Z0-9]\+\) connected.*/\1/')
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -53,6 +54,9 @@ bindsym XF86AudioMicMute exec "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
 
 bindsym XF86MonBrightnessDown exec "xbacklight -dec 2; killall -USR1 py3status"
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 2; killall -USR1 py3status"
+
+bindsym $mod+XF86MonBrightnessDown exec "xrandr --output $monitor --gamma 1.1:0.8:0.7 --brightness 0.55"
+bindsym $mod+XF86MonBrightnessUp exec "xrandr --output $monitor --gamma 1:1:1 --brightness 1"
 
 bindsym $mod+u [urgent=latest] focus
 
@@ -239,4 +243,5 @@ for_window [class="Spotify"] move to workspace $ws12
 exec --no-startup-id /usr/lib/mate-notification-daemon/mate-notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always --no-startup-id nm-applet
+exec_always --no-startup-id cbatticon
 exec --no-startup-id /usr/bin/feh --bg-scale ~/Downloads/canyon_16_1_by_lyssonan-d8gvns3.jpg
