--- a/arch_install/roles/basics/tasks/main.yml
+++ b/arch_install/roles/basics/tasks/main.yml
@@ -42,7 +42,6 @@
     state: link
 
 - name: Enable systemd-timesyncd.service
-  command: systemctl enable systemd-timesyncd.service
-  # systemd:
-  #   name: systemd-timesyncd.service
-  #   enabled: yes
+  systemd:
+    name: systemd-timesyncd.service
+    enabled: yes
