--- a/laptop_setup/roles/xserver/tasks/main.yml
+++ b/laptop_setup/roles/xserver/tasks/main.yml
@@ -1,10 +1,18 @@
 ---
 
-- name: install xorg driver
+- name: install xorg driver (intel)
   pacman:
     name: [vulkan-intel, intel-media-driver, xf86-input-libinput]
     state: present
   become: true
+  when: cpu_vendor == 'intel'
+
+- name: install xorg driver (amd)
+  pacman:
+    name: [libva-mesa-driver, vulkan-radeon, mesa-vdpau,  xf86-video-amdgpu, amdvlk, xf86-input-libinput]
+    state: present
+  become: true
+  when: cpu_vendor == 'amd'
 
 - name: Create i915.conf
   lineinfile:
@@ -13,6 +21,7 @@
     create: yes
     mode: 0644
   become: true
+  when: cpu_vendor == 'intel'
 
 - name: ensure xorg.conf.d directory exists
   file:
