--- a/arch_install/roles/partitioning/tasks/main.yml
+++ b/arch_install/roles/partitioning/tasks/main.yml
@@ -60,7 +60,10 @@
 
 # Fetch the dev of the EFI partion
 - set_fact:
-    uefi_part_dev: "/dev/{{ ansible_devices[disk]['partitions'].keys() | first }}"
+    uefi_part: "{{ ansible_devices[disk]['partitions'].keys() | first }}"
+
+- set_fact:
+    uefi_part_dev: "/dev/{{ uefi_part }}"
 
 - debug:
     var: uefi_part_dev
@@ -85,7 +88,7 @@
 
 # Fetch the dev of the LVM partion
 - set_fact:
-    lvm_part_dev: "/dev/{{ ansible_devices[disk]['partitions'].keys() | select('ne', uefi_part_dev) | first }}"
+    lvm_part_dev: "/dev/{{ ansible_devices[disk]['partitions'].keys() | select('ne', uefi_part) | first }}"
 
 - debug:
     var: lvm_part_dev
